# home

./: .env.template  .gitignore  .gitmodules  README  README.md  compose.yaml  db.env  init.el  plan.org  todo
client/: .env  .env.development  .env.prod  .env.production  .gitignore  Dockerfile  Dockerfile.development  Dockerfile.production  app.json  models.ts  nginx.conf  package-lock.json  package.json  tsconfig.json
client/app/: _layout.tsx  home.tsx  index.tsx  login.tsx
client/components/: AuthWall.tsx  Collapsible.tsx
client/context/: SessionContext.tsx
client/hooks/: useStorageState.ts
client/providers/: ThemeProvider.tsx
client/services/: auth.ts  createServiceApi.ts  deviceService.ts  deviceTypeService.ts  environmentalService.ts  lightService.ts  plugService.ts  routineActionService.ts  routineService.ts  systemService.ts  transformer.ts  userService.ts
client/slices/: createModelSlice.ts  deviceSlice.ts  userSlice.ts
client/store/: config.ts  index.ts  store.ts
client/ws/: WebSocketManager.ts  websocketActionTypes.ts  websocketActions.ts  websocketMiddleware.ts
controller/: .env  .gitignore  Dockerfile  auth.py  controller.py  requirements.txt  websocket_client.py
esp/: .gitignore
esp/dial/: CMakeLists.txt  Makefile  flash_storage.sh  initial_setup.sh  partitions.csv  sdkconfig.defaults
esp/dial/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
esp/environmental/main/: CMakeLists.txt  KY015.cpp  KY015.hpp  Kconfig.projbuild  main.cpp
esp/lights/: .gitignore  (+1 more)
light/: .gitignore
mqtt-broker/: Dockerfile
(+224 files in other folders)
